--- a/MaquinaDeVendas/pom.xml
+++ b/MaquinaDeVendas/pom.xml
@@ -21,5 +21,10 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>LATEST</version>
         </dependency>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE123</version>
+        </dependency>
     </dependencies>
 </project>
